--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,7 @@ if(CUDA_FOUND)
     # whether to build x64.  We tell it to support most devices, though, 
     # to make sure more people can easily run class code without knowing 
     # about this compiler argument
-    set(CUDA_NVCC_FLAGS "
-                            -gencode;arch=compute_20,code=sm_20; 
-                            -gencode;arch=compute_11,code=sm_11; 
-                            -gencode;arch=compute_12,code=sm_12;
-                            -gencode;arch=compute_13,code=sm_13;")
+    set(CUDA_NVCC_FLAGS "")
 
     # add -Wextra compiler flag for gcc compilations
     if (UNIX)
