--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(libwb)
 find_package(CUDA REQUIRED)
 
+include_directories(${PROJECT_SOURCE_DIR})
+
 # Set warning levels for host compilation
 if (UNIX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
