Set the correct linker options on UNIX platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,13 +38,23 @@ endif ()
 # Add debugging to CUDA NVCC flags (for NVidia's NSight tools)
 set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG} "-G")
 
+# Set the correct linker options on UNIX platforms
 if (UNIX)
-    include(CheckLibraryExists)
-    check_library_exists(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME )
-    if(NOT HAVE_CLOCK_GETTIME)
-        message(FATAL_ERROR "clock_gettime not found")
-    endif(NOT HAVE_CLOCK_GETTIME)
-endif(UNIX)
+    set(LINK_LIBRARIES "-lm")
+    if (APPLE)
+        find_library(CUDA_LIBRARY NAMES CUDA)
+        get_filename_component(FRAMEWORK_DIRECTORY ${CUDA_LIBRARY} DIRECTORY)
+        set(LINK_LIBRARIES "${LINK_LIBRARIES} -F${FRAMEWORK_DIRECTORY} -framework CUDA")
+    else ()
+        include(CheckLibraryExists)
+        check_library_exists(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME)
+        if (HAVE_CLOCK_GETTIME)
+            set(LINK_LIBRARIES "${LINK_LIBRARIES} -lrt")
+        else ()
+            message(FATAL_ERROR "clock_gettime() not found")
+        endif ()
+    endif ()
+endif ()
 
 # Collect source files
 file(GLOB  wbhdr *.hpp *.h)
@@ -54,7 +64,7 @@ file(GLOB  wbsrc *.cpp *.c)
 macro (add_mp_executable name sources)
     cuda_add_executable(${name} ${sources} ${wbhdr} ${wbsrc})
     if(UNIX)
-        target_link_libraries(${name} ${LIBRT_LIBRARIES})
+        target_link_libraries(${name} ${LINK_LIBRARIES})
     endif(UNIX)
 endmacro()
 
