Simplify adding of MP executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,23 +57,14 @@ if (UNIX)
 endif ()
 
 # Collect source files
-file(GLOB  wbhdr *.hpp *.h)
-file(GLOB  wbsrc *.cpp *.c)
+file(GLOB WBHDR *.hpp *.h)
+file(GLOB WBSRC *.cpp *.c)
 
-# Simple macro to ease creation of MP executables.
-macro (add_mp_executable name sources)
-    cuda_add_executable(${name} ${sources} ${wbhdr} ${wbsrc})
-    if(UNIX)
-        target_link_libraries(${name} ${LINK_LIBRARIES})
-    endif(UNIX)
-endmacro()
-
-add_mp_executable(MP0 skel/mp0.cu)
-add_mp_executable(MP1 skel/mp1.cu)
-add_mp_executable(MP2 skel/mp2.cu)
-add_mp_executable(MP3 skel/mp3.cu)
-add_mp_executable(MP4 skel/mp4.cu)
-add_mp_executable(MP5 skel/mp5.cu)
-add_mp_executable(MP6 skel/mp6.cu)
-add_mp_executable(MP11 skel/mp11.cu)
-add_mp_executable(MP12 skel/mp12.cu)
+set(EXECUTABLES mp0 mp1 mp2 mp3 mp4 mp5 mp6 mp11 mp12)
+foreach (EXECUTABLE ${EXECUTABLES})
+    string(TOUPPER "${EXECUTABLE}" LABEL)
+    CUDA_ADD_EXECUTABLE(${LABEL} skel/${EXECUTABLE}.cu ${WBHDR} ${WBSRC})
+    if (UNIX)
+        target_link_libraries(${LABEL} ${LINK_LIBRARIES})
+    endif ()
+endforeach ()
