fix merge conflicts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ if (APPLE)
     endif ()
 endif ()
 
+
 # Add debugging to CUDA NVCC flags (for NVidia's NSight tools)
 set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG} "-G")
 
@@ -64,10 +65,34 @@ if (UNIX)
     endif ()
 endif ()
 
+if(CUDA_FOUND)
+    # compared to class settings, we let NVidia's FindCUDA CMake detect 
+    # whether to build x64.  We tell it to support most devices, though, 
+    # to make sure more people can easily run class code without knowing 
+    # about this compiler argument
+    set(CUDA_NVCC_FLAGS "")
+ 
+    # add -Wextra compiler flag for gcc compilations
+    if (UNIX)
+        set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler -Wall;")
+        set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler -Wextra")
+    endif (UNIX)
+ 
+    # add debugging to CUDA NVCC flags.  For NVidia's NSight tools.
+    set(CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG} "-G")
+    include_directories(${CMAKE_SOURCE_DIR})
+    include_directories(${CUDA_INCLUDE_DIRS})
+else(CUDA_FOUND)
+    message("CUDA is not installed on this system.")
+endif()
+
 # Collect source files
 file(GLOB WBHDR *.hpp *.h)
 file(GLOB WBSRC *.cpp *.c)
-
+ 
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CUDA_INCLUDE_DIRS})
+ 
 set(EXECUTABLES mp0 mp1 mp2 mp3 mp4 mp5 mp6 mp11 mp12)
 foreach (EXECUTABLE ${EXECUTABLES})
     string(TOUPPER "${EXECUTABLE}" LABEL)
