Simplify setting of `CUDA_NVCC_FLAGS`
Let `nvcc` set the appropriate virtual architecture based on the user's
specified real architecture. This avoids an error when compute
capability `21` is selected (there is no corresponding 'virtual'
architecture `21`).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ find_package(CUDA REQUIRED)
 include_directories(${PROJECT_SOURCE_DIR})
 
 # For some MPs it may be necessary to specify the compute capability of your
-# nVidia GPU. In that case, simply uncomment the following two lines that start
+# NVIDIA GPU. In that case, simply uncomment the following two lines that start
 # with 'set' and change the value of COMPUTE_CAPABILITY to one of the following
-# hardware architectures: Tesla-class 11, 12, or 13; Fermi-class 20 or 21;
-# Kepler-class 30, 32, or 35; or Maxwell-class 50 or 52
+# hardware architectures: Tesla-class '11', '12', or '13'; Fermi-class '20'
+# or '21'; Kepler-class '30', '32', '35'; or Maxwell-class '50' or '52'
 # set(COMPUTE_CAPABILITY 35)
-# set(CUDA_NVCC_FLAGS --generate-code;arch=compute_${COMPUTE_CAPABILITY},code=sm_${COMPUTE_CAPABILITY})
+# set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};--gpu-architecture;sm_${COMPUTE_CAPABILITY})
 
 # Set warning levels for host compilation
 if (UNIX)
