--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,14 @@ matrix:
           packages:
             - g++-5
       env: CXX=g++-5
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env: CXX=g++-6
     - compiler: clang
       addons:
         apt:
@@ -39,6 +47,15 @@ matrix:
           packages:
             - clang-3.7
       env: CXX=clang++-3.7
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
+          packages:
+            - clang-3.8
+      env: CXX=clang++-3.8
 
 script: 
   - $CXX --version
