--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ language: cpp
 os:
 - linux
 - osx
-
 matrix:
   include:
     - compiler: gcc
@@ -25,14 +24,6 @@ matrix:
           packages:
             - g++-5
       env: COMPILER=g++-5
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-      env: COMPILER=g++-6
     - compiler: clang
       addons:
         apt:
@@ -51,6 +42,14 @@ matrix:
           packages:
             - clang-3.7
       env: COMPILER=clang++-3.7
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env: COMPILER=g++-6
     - compiler: clang
       addons:
         apt:
@@ -67,5 +66,5 @@ install:
   - make get-deps
 script: 
   - $COMPILER --version
-  - CXX=$COMPILER make test
+  - make CXX=$COMPILER test
   - ./test
