--- a/.travis.yml
+++ b/.travis.yml
@@ -47,15 +47,15 @@ matrix:
 #          packages:
 #            - g++-6
 #      env: COMPILER=g++-6
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.8
-          packages:
-            - clang-3.8
-      env: COMPILER=clang++-3.8
+    # - compiler: clang
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-precise-3.8
+    #       packages:
+    #         - clang-3.8
+    #   env: COMPILER=clang++-3.8
 
 before_install:
   - sudo apt-get update -qq
