--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,27 @@
-version: 5.7.2.{build}
+
+
+# Operating system (build VM template)
 os: Visual Studio 2015
-environment:
-  matrix:
-  - {}
-build_script:
-- cmd: >-
-    mkdir build
-    cd build
-    cmake c:\Projects\libwb -G "Visual Studio 14"
-    cmake --build . --config Debug
+
+
+# scripts that are called at very beginning, before repo cloning
+init:
+  - git config --global core.autocrlf input
+
+# clone directory
+clone_folder: c:\projects\sqlite
+
+platform: x64
+configuration: Release
+
+install:
+  # by default, all script lines are interpreted as batch
+
+build:
+  project: INSTALL.vcxproj      # path to Visual Studio solution or project
+
+# scripts to run before build
+before_build:
+  - echo Running cmake...
+  - cd c:\projects\sqlite
+  - cmake -G "Visual Studio 14 2015 Win64" -DCMAKE_INSTALL_PREFIX=%P%
