--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,9 +27,8 @@ configuration:
 environment:
   P: "c:/projects/libs"
   matrix:
-    - CMAKE_GENERATOR: "Visual Studio 10 2010"
-    - CMAKE_GENERATOR: "Visual Studio 11 2012"
-    - CMAKE_GENERATOR: "Visual Studio 12 2013"
+    - CMAKE_GENERATOR: "Visual Studio 12 2013 Win64"
+    - CMAKE_GENERATOR: "Visual Studio 12 2015 Win64"
 
 
 install:
