--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ environment:
   P: "c:/projects/libs"
   matrix:
     - CMAKE_GENERATOR: "Visual Studio 12 2013 Win64"
-    - CMAKE_GENERATOR: "Visual Studio 12 2015 Win64"
+    - CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
 
 
 install:
@@ -41,7 +41,7 @@ build:
 before_build:
   - echo Running cmake...
   - cd c:\projects\libwb
-  - cmake -G "$env:CMAKE_GENERATOR" -DCMAKE_INSTALL_PREFIX=%P%
+  - cmake -G %CMAKE_GENERATOR% -DCMAKE_INSTALL_PREFIX=%P%
 
 # after_build:
 #   - echo after_build step
