--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,12 +21,13 @@ branches:
 
 platform:
   - x64
-configuration: 
+configuration:
   - Release
 
 environment:
   P: "c:/projects/libs"
   matrix:
+    - CMAKE_GENERATOR: "Visual Studio 10 2010 Win64"
     - CMAKE_GENERATOR: "Visual Studio 12 2013 Win64"
     - CMAKE_GENERATOR: "Visual Studio 14 2015 Win64"
 
